file rename to heptagons.js

--- a/src/popups/popup.html
+++ b/src/popups/popup.html
@@ -18,7 +18,7 @@
     <svg width="300" height="300" viewBox="-150 -150 300 300">
         <!-- Heptagons will be appended here by script.js -->
     </svg>
-    <script src="script.js"></script>
+    <script src="heptagons.js"></script>
 </body>
 
 </html>
