--- a/src/popups/popup.html
+++ b/src/popups/popup.html
@@ -8,8 +8,15 @@
     <style>
         .heptagon {
             fill: none; /* No fill color */
-            stroke: black; /* Black stroke color */
-            stroke-width: 2; /* Stroke width */
+            stroke: rgb(107, 101, 93); /* Dark grey stroke color */
+            stroke-width: 1.2; /* Stroke width */
+        }
+        
+        body {
+            background-image: url("../images/de_dust2_background.png");
+            background-size: cover; /* Ensure the background covers the entire page */
+            background-position: center; /* Center the background image */
+            background-repeat: no-repeat; /* Prevent the background from repeating */
         }
     </style>
 </head>
