--- a/src/popups/popup.html
+++ b/src/popups/popup.html
@@ -7,16 +7,16 @@
     <title>Polygon SVG</title>
     <style>
         .heptagon {
-            fill: none; /* No fill color */
-            stroke: rgb(107, 101, 93); /* Dark grey stroke color */
-            stroke-width: 1.2; /* Stroke width */
+            fill: none;
+            stroke: rgb(107, 101, 93);
+            stroke-width: 1.2;
         }
         
         body {
             background-image: url("../images/de_dust2_background.png");
-            background-size: cover; /* Ensure the background covers the entire page */
-            background-position: center; /* Center the background image */
-            background-repeat: no-repeat; /* Prevent the background from repeating */
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
         }
     </style>
 </head>
@@ -26,6 +26,7 @@
         <!-- Heptagons will be appended here by script.js -->
     </svg>
     <script src="heptagons.js"></script>
+    <script src="mapGraph.js"></script>
 </body>
 
 </html>
