updated modules in popup.html

--- a/src/popups/popup.html
+++ b/src/popups/popup.html
@@ -11,7 +11,7 @@
             stroke: rgb(107, 101, 93);
             stroke-width: 1.2;
         }
-        
+
         body {
             background-image: url("../images/de_dust2_background.png");
             background-size: cover;
@@ -25,8 +25,10 @@
     <svg width="450" height="450" viewBox="-150 -150 300 300">
         <!-- Heptagons will be appended here by script.js -->
     </svg>
-    <script src="heptagons.js"></script>
-    <script src="mapGraph.js"></script>
+    <script type="module" src="../scripts/axios.min.js"></script>
+    <script type="module" src="./heptagons.js"></script>
+    <script type="module" src="./mapGraph.js"></script>
+
 </body>
 
 </html>
